Fix some lingering breakpoint gaps

--- a/assets/src/less/plugins/event-organiser.less
+++ b/assets/src/less/plugins/event-organiser.less
@@ -51,7 +51,7 @@
 	@media(min-width: @screen-lg) {
 
 		.entry-header {
-			padding-left: 120px; // Align with main content column
+			padding-left: 100px; // Align with main content column
 		}
 
 		.event-content {
