--- a/assets/src/less/scaffold.less
+++ b/assets/src/less/scaffold.less
@@ -127,23 +127,7 @@
 
 		.content-area {
 			float: none;
-			width: @container-full-md;
-		}
-	}
-
-	@media(min-width: @screen-lg) {
-
-		.content-area {
-			float: none;
-			width: @container-full-lg;
-		}
-	}
-
-	@media(min-width: @screen-xl) {
-
-		.content-area {
-			float: none;
-			width: @container-full-xl;
+			width: 100%;
 		}
 	}
 }
